# skirt-rs

./: Cargo.toml  README.md
src/: aabb.rs  error.rs  main.rs  parameters.rs  pattern.rs  reader.rs  render.rs
src/args/: mod.rs
